# mizuki_tg_bot

./: .env.example  .gitignore  MAINTENANCE.md  README.md  bot.py  pyproject.toml  requirements.txt  tg-archive-bot.service
tests/: __init__.py  conftest.py  fakes.py  test_behaviors.py  test_downloader.py  test_error_notifications.py  test_safety_routing.py  test_telegram_runtime.py  test_text_preservation.py  test_twitter_bookmarks.py  test_web_bookmarks.py
tests/tools/: export_fixtures.py
tg_archive_bot/: __init__.py  cli.py  config.py  db.py  downloader.py  http_api.py  media.py  messages.py  safety.py  service.py  telegram_runtime.py  twitter_bookmarks.py  url_utils.py  web_bookmarks.py
tools/: x_oauth_callback.py
